Fix post header spacing

--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -60,12 +60,12 @@ main > article h6 { @apply font-bold text-blue-500 dark:text-yellow-300 mt-8 mb-
 
 main > article blockquote { @apply pl-4 border-l-8; }
 
-/*
-section h1,
-section h2,
-section h3 {
-	@apply mt-20;
-} */
+/* Post Header */
+article > header h1 { @apply my-0; }
+article > header time { @apply italic text-gray-400 dark:text-gray-500; }
+
+/* Section spacing */
+section { @apply mt-16; }
 
 /*
 Pixel image by default, full resolution on hover.
